apply plugin: 'com.android.application'

android {
    compileSdkVersion 34
    defaultConfig {
        applicationId "com.example.SMmoney"
        minSdkVersion 21
        targetSdkVersion 34
        vectorDrawables.useSupportLibrary = true
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    buildFeatures {
        buildConfig = true
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    namespace 'com.example.smmoney'

    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs << "-Xlint:deprecation"
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'androidx.preference:preference:1.2.1'
    implementation "androidx.annotation:annotation:1.10.0"
    implementation 'com.google.android.material:material:1.12.0'
    //implementation 'com.android.support:support-v4:28.0.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    //implementation 'androidx.legacy:legacy-support-core-utils:1.0.0'
    //implementation 'com.android.support:support-annotations:28.0.0'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'


    implementation 'androidx.navigation:navigation-fragment:2.7.7' // use -ktx for Kotlin
    implementation 'androidx.navigation:navigation-ui:2.7.7' // use -ktx for Kotlin
    implementation "androidx.exifinterface:exifinterface:1.3.7"

}
